# zabt-ai

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.cloud.yml  docker-compose.cpu.yml  docker-compose.yml  package-lock.json  package.json  ruff.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03468ac9f8b1_add_core_tables.py  1fcb7992e425_add_summary_edit_tracking_fields.py  2432691ecffe_add_summary_templates.py  a1b2c3d4e5f6_add_youtube_source_fields.py  b3c4d5e6f7a8_add_missing_indexes.py  c1d2e3f4g5h6_add_integration_and_calendar_event.py  d2e3f4g5h6i7_add_email_share.py  d43ee14463f8_initial_schema.py  e3f4g5h6i7j8_add_bot_job.py  f7a8b9c0d1e2_add_transcription_type_to_meeting.py  g4h5i6j7k8l9_add_meeting_intelligence.py  h5i6j7k8l9m0_add_device_table.py  i7j8k9l0m1n2_add_language_entry_and_preferences.py  j8k9l0m1n2o3_drop_calendar_event_recording_columns.py  k9l0m1n2o3p4_add_visual_breakdown.py  k9l0m1n2o3p4_cascade_delete_integration_events.py  l0m1n2o3p4q5_add_visual_breakdown.py  m1n2o3p4q5r6_drop_calendar_meeting_bot_tables.py
backend/app/: main.py  worker.py
backend/app/api/: api.py  deps.py  styles.py  upload.py
backend/app/cli/: __init__.py  __main__.py  transcribe.py
backend/app/core/: config.py  logging.py  otel_patch.py  security.py
backend/app/db/: engine.py
backend/app/middleware/: audit.py
backend/app/models/: __init__.py  base.py  bot_job.py  calendar_event.py  device.py  email_share.py  integration.py  meeting_intelligence.py
backend/app/services/: ai_agent.py  analytics.py  base.py  bot_orchestration.py  calendar_sync.py  device.py  email.py  email_share.py  integration.py  meeting.py  meeting_intelligence.py  microsoft_graph.py  pdf_export.py  pdf_parser.py  seed_templates.py  storage.py  stripe.py  style_reader.py  styles.py  template.py  template_seed.py  visual_segments.py  youtube.py
backend/tests/: conftest.py  test_calendar_sync.py  test_calendar_sync_nplus1.py  test_db_engine.py  test_email_idempotency.py  test_integration_service.py  test_transcription_service.py
backend/tests/contract/: test_meetings.py
backend/tests/e2e/: test_whisper_upload_flow.py
backend/tests/integration/: test_devices_api.py  test_languages_endpoints.py  test_re_transcribe_endpoint.py  test_styles.py  test_upload_language.py  test_uploads.py  test_uploads_api.py  test_visual_breakdown_endpoints.py  test_websocket.py
backend/tests/unit/: test_composite_provider.py  test_config_defaults.py  test_device_service.py  test_expo_push_provider.py  test_gpu_client_language.py  test_language_catalog.py  test_language_models.py  test_language_preferences.py  test_microsoft_graph.py  test_provider_factory.py  test_transcription_language_resolution.py  test_transcription_types.py  test_transliteration.py  test_vision_client.py  (+3 more)
zabt-bot-worker/: Dockerfile  entrypoint.sh  pyproject.toml  test_join.py
zabt-bot-worker/src/: browser.py  config.py  logging.py  main.py  models.py  recorder.py  server.py  session.py  storage.py
zabt-gpu-worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml
zabt-gpu-worker/scripts/: download_models.py
zabt-gpu-worker/src/: audio_validation.py  config.py  handler.py  logging.py  main.py  models.py  pipeline.py  server.py
zabt-gpu-worker/tests/: test_pipeline_language.py
zabt-vision-worker/: .gitignore  Dockerfile  README.md  pyproject.toml
zabt-vision-worker/tests/: conftest.py  test_candidates.py  test_cli.py  test_cross_validate.py  test_extract_frames.py  test_integration.py  test_ocr_signal.py  test_ollama_inference.py  test_phash_signal.py  test_pipeline_run.py  test_refine_boundaries.py  test_scene_signal.py  test_server.py  test_settings.py  test_transcript_hint_signal.py  test_types.py  test_upload.py  test_video_native.py
zabt-vision-worker/zabt_vision/: __init__.py  cli.py  server.py  settings.py  types.py
(+600 files in other folders)
