[project]
name = "zabt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "sentry-sdk[celery,fastapi,sqlalchemy]>=2.57.0",
    "logfire[fastapi,sqlalchemy,httpx,celery]>=4.25.0",
    "langfuse>=2.0.0",
    "openai>=2.21.0",
    "boto3>=1.42.54",
    "ffmpeg-python>=0.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.10.2",
    "posthog>=3.0",
    "resend>=2.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.2.0",
    "runpod>=1.7.0",
    "sqlmodel>=0.0.37",
    "typer>=0.22.0",
    "uvicorn[standard]>=0.41.0",
    "weasyprint>=68.0",
    "mistune>=3.0",
    "yt-dlp>=2026.3.3",
    "cryptography>=46.0.7",
    "jsonschema>=4.20.0",
]

[project.scripts]
zabt = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
