[project]
name = "zabt-bot-worker"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "pydantic-settings>=2.13",
    "playwright>=1.58",
    "boto3>=1.42",
    "httpx>=0.28",
    "sentry-sdk[fastapi]>=2.57",
    "logfire>=4.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
